Version 1.2
-----------
New Applications
- Entertainment : iTunes
- Internet : uTorrent, Google WebAccelerator
- Productivity: AbiWord, Google Desktop, PDFCreator, Picasa

GUI Enhancements
- Checked applications are now unchecked as they are successfully installed or
  uninstalled. If the install/uninstall fails for any reason, the application
  will remain checked.

Internal Improvements
- As recommended by R. Francis Smith, new applications can be added or existing
  applications modified by making an entry in userdb.ini. This way, changes made
  by the user are not lost through database updates.
- Added support for MSI packages.
- Added support for applications which do not disclose their versions such as
  Google WebAccelerator and Desktop.
- Category and section sorts are now done case insensitively so that iTunes and
  uTorrent can show up in the right order.

Bug Fixes
- If install/uninstall failed for whatever reason, AppSnap still assumed that
  everything worked fine. We now check the return codes of the installer and
  fail if non-zero.
- Reload function was not deleting all process objects which were retaining the
  configuration loaded previously.

Version 1.1
-----------
New Applications
- Internet : Azureus, Gaim, Miranda, Thunderbird, WinSCP
- Entertainment : CDex, Songbird, VideoLAN
- Productivity: Audacity, BurnAtOnce, Nvu, Vim
- Utilities : AutoHotKey, CCleaner, ClamWin

GUI Enhancements
- Replaced install/uninstall buttons with a nice toolbar.
- Added buttons to download and upgrade applications.
- Added an update database button that gets latest version of db.ini from SVN.
- AppSnap can now reload the configuration by clicking the reload button.
- All installed applications can be filtered by selecting the 'Installed'
  category in the dropdown menu.
- Increased default width and height of GUI to fit toolbar and more applications.

CLI Enhancements
- Update database with the latest version of db.ini from SVN using -U.