@@ -151,6 +151,21 @@ chinstdir     = /D=#INSTALL_DIR#
 uninstall     = winscp#MAJOR_VERSION#_is1
 uninstparam   = /S _?=#INSTALL_DIR#
 
+[Xming]
+
+category      = Utilities
+describe      = X-Windows Server
+website       = http://www.straightrunning.com/XmingNotes/
+scrape        = http://prdownloads.sourceforge.net/xming/
+version       = Xming-([0-9]-[0-9]-[0-9]-[0-9]+)-setup.exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/xming/
+filename      = Xming-#VERSION#-setup.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Xming_is1
+uninstparam   = /sp- /silent /norestart
+
 ; #############################
 ; Entertainment
 ; #############################
@@ -472,6 +487,114 @@ upgrades      = false
 chinstdir     = /D=#INSTALL_DIR#
 uninstall     = 7-Zip
 uninstparam   = /S _?=#INSTALL_DIR#
+
+[Stickies]
+
+category      = Utilities
+describe      = Virtual Post-IT Notes
+website       = http://www.zhornsoftware.co.uk/stickies/
+scrape        = http://www.zhornsoftware.co.uk/stickies/download.html
+version       = Stickies ([0-9]\.[0-9][a-z])
+download      = http://www.zhornsoftware.co.uk/stickies/
+filename      = stickies.exe
+instparam     = /s
+upgrades      = false
+chinstdir     =
+uninstall     = Stickies #VERSION#
+uninstparam   = /s
+
+; #############################
+; Development
+; #############################
+
+[ActivePerl]
+
+category      = Development
+describe      = Programming Language
+website       = http://www.activestate.com/Products/ActivePerl/
+scrape        = http://downloads.activestate.com/ActivePerl/Windows/5.8/
+version       = ActivePerl-([0-9]\.[0-9]\.[0-9]\.[0-9]+-MSWin32-x86-[0-9]+).msi
+filename      = ActivePerl-#VERSION#.msi
+instparam     = /passive /norestart
+upgrades      = false
+chinstdir     =
+uninstall     = {8C8C2500-3756-4CFF-8CAD-E840A36AAB84}
+uninstparam   = /passive /norestart
+
+[Python]
+
+category      = Development
+describe      = Programming Language
+website       = http://www.python.org/
+scrape        = http://www.python.org/ftp/python/
+version       = ([0-9]\.[0-9][.0-9]*)/
+download      = http://www.python.org/ftp/python/#VERSION#/
+filename      = python-#VERSION#.msi
+instparam     = /passive /norestart
+upgrades      = false
+chinstdir     =
+uninstall     = {75E71ADD-042C-4F30-BFAC-A9EC42351313}
+uninstparam   = /passive /norestart
+
+[PyCurl]
+
+category      = Development
+describe      = Python URL Transfer Library
+website       = http://pycurl.sourceforge.net/
+scrape        = http://pycurl.sourceforge.net/download/
+version       = pycurl-ssl-([0-9]\.[0-9]+\.[0-9]\.[0-9]).win32
+filename      = pycurl-ssl-#VERSION#.win32-py2.5.exe
+instparam     =
+upgrades      = false
+chinstdir     =
+uninstall     = pycurl-ssl-py2.5
+uninstparam   =
+
+[PyYAML]
+
+category      = Development
+describe      = Python YAML Library
+website       = http://www.pyyaml.org/
+scrape        = http://www.pyyaml.org/wiki/PyYAML
+version       = PyYAML-([0-9]\.[0-9]+).win32
+download      = http://pyyaml.org/download/pyyaml/
+filename      = PyYAML-#VERSION#.win32-py2.5.exe
+instparam     =
+upgrades      = false
+chinstdir     =
+uninstall     = PyYAML-py2.5
+uninstparam   =
+
+[wxPython]
+
+category      = Development
+describe      = GUI Library for Python
+website       = http://www.wxpython.org/
+scrape        = http://prdownloads.sourceforge.net/wxpython/
+version       = win32-unicode-([0-9]\.[0-9]\.[0-9]\.[0-9])
+download      = http://easynews.dl.sourceforge.net/sourceforge/wxpython/
+filename      = wxPython#MAJORMINOR_VERSION#-win32-unicode-#VERSION#-py25.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     =
+uninstall     = wxPython#MAJORMINOR_VERSION#-unicode-py25_is1
+uninstparam   = /sp- /silent /norestart
+
+[XAMPP]
+
+category      = Development
+describe      = Apache/MySQL/PHP/Perl Distribution
+website       = http://www.apachefriends.org/en/xampp.html
+scrape        = http://prdownloads.sourceforge.net/xampp/
+version       = xampp-win32-([0-9]\.[0-9]\.[0-9][a-z])-installer.exe
+download      = http://easynews.dl.sourceforge.net/sourceforge/xampp/
+filename      = xampp-win32-#VERSION#-installer.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = xampp
+uninstparam   = /S _?=#INSTALL_DIR#
+
 
 ; [dummy]
 
